--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         // Function to add a marker at a specific point on the map
         const instructions = [
             { title: "Current Time", info: "10:04 AM" },
-            { title: "Address of Origin", info: "133 Yvonne Dr, Avondale, LA 70094" },
+            { title: "Address of Origin", info: "400 Russell Dr, New Orleans, LA 70143" },
             { title: "Address of Destination", info: "2801 Bruin Dr, Kenner, LA 70065" },
             { title: "Distance of Destination", info: "0" },
             { title: "Estimated Time to Destination", info: "0" },
@@ -881,7 +881,7 @@
                         },
                         geometry: {
                             type: 'Point',
-                            coordinates: [-90.20404599885359,29.911692449511662]
+                            coordinates: [-90.02027327362322,29.831791638511405]
                         }
                     }
                 ]
