--- a/index.html
+++ b/index.html
@@ -213,9 +213,9 @@
             { title: "Address of Destination", info: "2801 Bruin Dr, Kenner, LA 70065." },
             { title: "Distance of Destination", info: "0" },
             { title: "Estimated Time to Destination", info: "0" },
-            { title: "State of Charge of Battery", info: "60% Charge." },
-            { title: "Range of Current Battery", info: "180 Minutes." },
-            { title: "Estimated Drive-distance with Current Charge", info: "135 Miles." },
+            { title: "State of Charge of Battery", info: "60% charge." },
+            { title: "Range of Current Battery", info: "180 minutes." },
+            { title: "Estimated Drive Distance with Current Charge", info: "135 miles." },
             { title: "Type of Chargin Socket", info: "J1772." },
             { title: "kW Needed to Fully Charge Your Car", info: "24 kW." }
         ];
@@ -245,14 +245,14 @@
                         { type: 'J1772', value: '215' }
                     ],
                 socketAvalability: [
-                        { type: 'J1772', value: '2 available' }
+                        { type: 'J1772', value: '2' }
                     ],
 
                 energySource: '63% Grid, 37% Renewable',
 
                 chargingFee: '$0.45',
                 chargingFeeRate: 'per kWh',
-                parkingFee: 'free',
+                parkingFee: '$0.00',
                 parkingFeeRate: 'for any amount of time',
 
                 coffee: 'Yes <br><br> There is a coffee shop in walking distance 0.6 miles away.',
@@ -284,7 +284,7 @@
                         { type: 'J1772', value: '220' }
                     ],
                 socketAvalability: [
-                        { type: 'J1772', value: '0 available' }
+                        { type: 'J1772', value: '0' }
                     ],      
 
                 energySource: '41% Grid, 59% Renewable',
@@ -292,7 +292,7 @@
                 chargingFee: '$0.00',
                 chargingFeeRate: 'per kWh',
 
-                parkingFee: 'free',
+                parkingFee: '$0.00',
                 parkingFeeRate: 'for any amount of time',
 
                 coffee: 'Yes <br><br> There is a coffee shop in walking distance 0.1 mile away.',
@@ -518,20 +518,18 @@
             return `
                     <h3 style="font-size: 20px; margin-top: 0; margin-bottom: 10px;">${station.name}</h3>
                     <img src="${decodeURIComponent(encodedImageUrl)}" alt="${station.name}" style="width:100%;max-width:300px;">
-                    <button class="popup-button" onclick="showMoreInfo('${station.name}', 'location', '<b>Location:</b> <br> ${station.location}.', '${boxId}')">Location</button>
+                    <button class="popup-button" onclick="showMoreInfo('${station.name}', 'location', '<b>Location:</b> <br> ${station.location}', '${boxId}')">Location</button>
                     <button class="popup-button" onclick="showMoreInfo('${station.name}', 'originDistance', '<b>Distance from my location:</b> ${station.originDistance} miles. <br><br>The distance from your location to ${station.name.toLowerCase()} is ${station.originDistance} miles.', '${boxId}')">Distance from my Location</button>
                     <button class="popup-button" onclick="showMoreInfo('${station.name}', 'originTime', '<b>Travel time from my location:</b> ${station.originTime} minutes. <br><br>The estimated travel time from your location to ${station.name.toLowerCase()} is ${station.originTime} minutes.', '${boxId}')">Travel Time from my Location</button>
                     <button class="popup-button" onclick="showMoreInfo('${station.name}', 'destDistance', '<b>Distance to destination:</b> ${station.destDistance} miles. <br><br>The distance from ${station.name.toLowerCase()} to the destination is ${station.destDistance} miles.', '${boxId}')">Distance to Destination</button>
                     <button class="popup-button" onclick="showMoreInfo('${station.name}', 'destTime', '<b>Travel time to destination:</b> ${station.destTime} minutes. <br><br>The estimated travel time from  ${station.name.toLowerCase()} to the destination is ${station.destTime} minutes.', '${boxId}')">Travel Time to Destination</button>
-
                     <button class="popup-button" onclick="showMoreInfo('${station.name}', 'waitTime', '<b>Wait time at station:</b><br>${waitTimeDetails}', '${boxId}')">Wait Time at Station</button>
                     <button class="popup-button" onclick="showMoreInfo('${station.name}', 'plugs', '<b>Plugs available at station:</b><br>${plugDetails}', '${boxId}')">Plugs Available at Station</button>
                     <button class="popup-button" onclick="showMoreInfo('${station.name}', 'chargeTime', '<b>Charge time:</b><br>${chargeTimeDetails}', '${boxId}')">Charge Time</button>
                     <button class="popup-button" onclick="showMoreInfo('${station.name}', 'socketAvalability', '<b>Socket availability:</b><br>${socketAvailabilityDetails}', '${boxId}')">Socket Availability</button>
-
                     <button class="popup-button" onclick="showMoreInfo('${station.name}', 'energySource', '<b>Energy source at station:</b><br>${station.energySource}.', '${boxId}')">Energy Source at Station</button>
                     <button class="popup-button" onclick="showMoreInfo('${station.name}', 'fees', '<b>Cost to charge:</b> ${station.chargingFee}. <br><br> The price ${station.chargingFeeRate} is ${station.chargingFee}.', '${boxId}')">Cost to Charge</button>
-                    <button class="popup-button" onclick="showMoreInfo('${station.name}', 'parking', '<b>Cost to park at station:</b> ${station.parkingFee}. <br><br> The price of parking your car at the charging station ${station.parkingFeeRate} is ${station.parkingFee}.', '${boxId}')">Cost to Park at Station</button>
+                    <button class="popup-button" onclick="showMoreInfo('${station.name}', 'parking', '<b>Cost to park at station:</b> ${station.parkingFee} parking. <br><br> The price of parking your car at the charging station ${station.parkingFeeRate} is ${station.parkingFee}.', '${boxId}')">Cost to Park at Station</button>
                     <button class="popup-button" onclick="showMoreInfo('${station.name}', 'coffee', '<b>Coffe shop:</b> ${station.coffee}', '${boxId}')">Coffee Shop</button>
                     <button class="popup-button" onclick="showMoreInfo('${station.name}', 'grocery', '<b>Grocery store:</b> ${station.grocery}', '${boxId}')">Grocery Store</button>
                     <button class="popup-button" onclick="showMoreInfo('${station.name}', 'sportsClothes', '<b>Sports/Clothing store:</b> ${station.sportsClothes}', '${boxId}')">Sport/Clothing Store</button>
@@ -581,7 +579,7 @@
             content = `<p style="font-size: 16px; padding: 5px;">${infoContent}</p>`;
 
             if (infoType === 'rating') {
-                content = `<p style="font-size: 16px; padding: 5px;"><span class="stars">${station.rating}</span> <br><br> There are ${station.ratingNum} total reviews</p>`;
+                content = `<p style="font-size: 16px; padding: 5px;"><b>Rating:</b><br><span class="stars">${station.rating}</span> <br><br> There are ${station.ratingNum} total reviews.</p>`;
                 console.log('Rating clicked');
             }
 
