--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             { title: "State of Charge of Battery", info: "60% charge." },
             { title: "Range of Current Battery", info: "180 minutes." },
             { title: "Estimated Drive Distance with Current Charge", info: "135 miles." },
-            { title: "Type of Chargin Socket", info: "J1772." },
+            { title: "Type of Charging Socket", info: "J1772." },
             { title: "kW Needed to Fully Charge Your Car", info: "24 kW." }
         ];
 
