spelling change wave 3

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                 parkingFee: '$0.00',
                 parkingFeeRate: 'for any amount of time',
 
-                coffee: 'Yes. <br><br> There is a coffee shop in walking distance 0.1 mile away.',
+                coffee: 'Yes. <br><br> There is a coffee shop in walking distance 0.1 miles away.',
                 grocery: 'Yes. <br><br> There is a grocery store in walking distance 0.5 miles away.',
                 sportsClothes: 'Yes. <br><br> There is a sports or clothing store in walking distance 0.4 miles away.',
                 
